--- a/client/main.css
+++ b/client/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #EEEEEE;
+    background-color: #e2e2e2;
 }
 
 /* header styles start*/
@@ -131,3 +131,61 @@ body {
     vertical-align: middle;
     padding-right: 5px;
 }
+
+.contact-me {
+    background-color: #ff7800;
+    color: #FFFFFF;
+}
+
+.contact-me .input-label {
+    font-size: 14px;
+    color: #FFFFFF;
+}
+
+.contact-me input textarea {
+    font-size: 14px;
+    color: #FFFFFF;
+}
+
+.contact-me input[type=text] {
+    border-bottom: 1px solid #c9c9c9;
+    box-shadow: 0 1px 0 0 #c9c9c9;
+}
+
+.contact-me input[type=text]:focus {
+    border-bottom: 1px solid #ffffff;
+    box-shadow: 0 1px 0 0 #ffffff;
+}
+
+.contact-me input[type=text].valid {
+    border-bottom: 1px solid #FFFFFF;
+    box-shadow: 0 1px 0 0 #FFFFFF;
+}
+
+.contact-me input[type=email] {
+    border-bottom: 1px solid #c9c9c9;
+    box-shadow: 0 1px 0 0 #c9c9c9;
+}
+
+.contact-me input[type=email]:focus {
+    border-bottom: 1px solid #ffffff;
+    box-shadow: 0 1px 0 0 #ffffff;
+}
+
+.contact-me input[type=email].invalid {
+    border-bottom: 1px solid #ff0429;
+    box-shadow: 0 1px 0 0 #ff0429;
+}
+
+.contact-me textarea {
+    border-bottom: 1px solid #c9c9c9;
+    box-shadow: 0 1px 0 0 #c9c9c9;
+}
+
+.contact-me textarea.materialize-textarea:focus {
+    border-bottom: 1px solid #ffffff;
+    box-shadow: 0 1px 0 0 #ffffff;
+}
+
+
+
