--- a/client/main.css
+++ b/client/main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #cdcdcd;
+    background-color: #eceff1;
 }
 
 /* header styles start*/
@@ -9,9 +9,14 @@ body {
 
 .resume li {
     font-size: 16px;
+    color: #455a64;
     display: list-item;
     list-style-type: circle;
     font-family: ‘Lucida Sans Unicode’, ‘Lucida Grande’, sans-serif;
+}
+
+.resume h4 {
+    color: #37474f;
 }
 
 .resume-header {
@@ -67,7 +72,7 @@ body {
 
 /* Sections styles start */
 .section-title {
-    background-color: #646464;
+    background-color: #455a64;
     color: #FFFFFF;
     text-align: center;
     padding-top: 2px;
@@ -84,7 +89,7 @@ body {
 .skill-set h4 {
     margin-bottom: 8px;
     border-left: solid;
-    border-color: #646464;
+    border-color: #455a64;
     padding-left: 5px;
 }
 
@@ -103,7 +108,7 @@ body {
 
 .entry-title h4 {
     border-left: solid;
-    border-color: #646464;
+    border-color: #455a64;
     padding-left: 5px;
 }
 
@@ -133,7 +138,7 @@ body {
 }
 
 .contact-me {
-    background-color: #ff7800;
+    background-color: #78909c;
     color: #FFFFFF;
 }
 
