Changed font color in resume

--- a/client/main.css
+++ b/client/main.css
@@ -9,7 +9,7 @@ body {
 
 .resume li {
     font-size: 16px;
-    color: #455a64;
+    color: #425761;
     display: list-item;
     list-style-type: circle;
     font-family: ‘Lucida Sans Unicode’, ‘Lucida Grande’, sans-serif;
