Cleaned up css file

--- a/client/main.css
+++ b/client/main.css
@@ -273,44 +273,6 @@ li a#logo:hover {
     }
 }
 
-.flip-card-container {
-    cursor: pointer;
-    text-align: center;
-    position: relative;
-    -webkit-perspective: 600px; /* Chrome, Safari, Opera */
-    perspective: 600px;
-    height: 120px;
-}
-
-.flip-card {
-    position: absolute;
-    transform-style: preserve-3d;
-    transition: all 0.8s ease-in-out;
-    height: 100%;
-    width: 100%;
-}
-
-.flip-card:hover {
-    transform: rotateX(180deg);
-}
-
-.flip-card .side {
-    backface-visibility: hidden;
-    position: absolute;
-    overflow: hidden;
-    height: 100%;
-    width: 100%;
-    background-color: transparent;
-}
-
-.flip-card .back {
-    transform: rotateX(180deg);
-    text-align: center;
-    line-height: 150px;
-    background-color: #90a4ae;
-    border-radius: 20px;
-}
-
 .title {
     font-family: 'Damion', cursive;
 }
@@ -321,4 +283,24 @@ li a#logo:hover {
 
 .about-me {
     font-size: 16px;
+}
+
+.experience {
+    font-size: 16px;
+}
+
+.expDescription {
+    /* Initially we don't want any height, and we want the contents to be hidden */
+    max-height: 0;
+    overflow: hidden;
+
+    /* Set our transitions up. */
+    -webkit-transition: max-height 0.5s;
+    -moz-transition: max-height 0.5s;
+    transition: max-height 0.5s;
+    font-family: 'Patua One', cursive
+}
+
+.experienceExpandable:hover .expDescription, .experienceExpandable:active .expDescription{
+    max-height: 300px;
 }
