--- a/client/main.css
+++ b/client/main.css
@@ -34,6 +34,10 @@ li a#logo:hover {
     float: left;
 }
 
+.navbar li.active {
+    background-color: #597381;
+}
+
 .navbar li a {
     display: block;
     color: white;
