--- a/client/main.css
+++ b/client/main.css
@@ -286,11 +286,12 @@ li a#logo:hover {
 }
 
 .about-me {
-    font-size: 16px;
+    font-size: 18px;
 }
 
 .experience {
-    font-size: 16px;
+    font-size: 18px;
+    color: #455a64;
 }
 
 .experienceExpandable {
